<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in as guest</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="app_name">Auto-H</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="conf_email">Confirm Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This pin is incorrect</string>
    <string name="error_invalid_conf_email">Emails do not match</string>
    <string name="error_invalid_conf_pin">Pins do not match</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This pin is too short</string>
    <string name="fire">Fire</string>
    <string name="fire_log_in">Fire Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intensity">Intensity</string>
    <string name="open_the_door">"Someone's on the door!"</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_conf_pin">Confirm Pin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_phone">Phone No:</string>
    <string name="prompt_pin">Pin</string>
    <string name="register">Register</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bottomtabs">Bottomtabs</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Auto-H</string>
    <string name="title_activity_main2">Bell</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="title_activity_sign_up">New User</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_controls">Controls</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="guest">Guest</string>
    <string name="admin">Admin</string>
    <string name="client">Client</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="forgot_your_pin">Forgot your pin?</string>
    <string name="enter_your_pin">enter your pin</string>
    <string name="bottom">bottom</string>
    <string name="logo">logo</string>
    <string name="the_home_automation_app">The Home Automation App</string>
    <string name="title_status">Status</string>
    <string name="title_preferences">Preferences</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_settings">Settings</string>
</resources>
